--- a/20190314.md
+++ b/20190314.md
@@ -1,26 +1,26 @@
-published here: https://wiki.infra-workshop.tech/5c8a685fc129810042faa929
-
 # 20190314-ストレージってなんだっけ？ ～ AWSのストレージサービスを添えて ～
 
-
-# ストレージってなんだっけ
+published here: https://wiki.infra-workshop.tech/5c8a685fc129810042faa929
+ストレージとは何だったかをおさらいしつつ。
 
 ## ストレージの種類
+
 * (B)ブロックストレージ
 * (F)ファイルストレージ
 * (O)オブジェクトストレージ
 
 ## 前置き
+
 * AWSのストレージサービスになぞりつつ学んでいきましょう。
 * 主に、クライアントからのアクセスが違います。
-
 
 ## ブロックストレージ
 
 1番難しい
 
 ### ストレージのプロトコル
-*必ず何かしらのプロトコルを使う
+
+* 必ず何かしらのプロトコルを使う
   * FC(Fibre Channel)
   * FCoE(FC over Ethernet)
   * iSCSI (port 3260)
@@ -51,13 +51,14 @@ published here: https://wiki.infra-workshop.tech/5c8a685fc129810042faa929
       * Linuxでは、主に4KBで管理されていることが多い
       * 512 Byte sector or 4KB sectorに分かれる
     * ブロックサイズ内で容量が増えても使用ブロック数は変わらない
-    
     * ブロック, セクターは覚えてほしい
       * ブロックサイズを小さくする→きめ細かく容量を使えるのでディスクの容量効率を上げることができる、遅くなる
       * ブロックサイズを大きくする→ディスクの容量効率は下がる、アドレスの解決数が減るので早くなる
 
 ---
+
 ## ファイルストレージ
+
 * 主に２種類
   * NFS
     * unix系でつかわれる
@@ -100,7 +101,7 @@ published here: https://wiki.infra-workshop.tech/5c8a685fc129810042faa929
 
 ## AWSでの実践
 
-### ブロックストレージ
+### 実践: ブロックストレージ
 
 * AWSでは、ブロックストレージがすぐには出てこない
   * Elastic Block Store
@@ -116,7 +117,7 @@ published here: https://wiki.infra-workshop.tech/5c8a685fc129810042faa929
     * ls -lhai
       * .. と ひとつ上 のブロックが同じであることが分かる
 
-### ファイルストレージ
+### 実践: ファイルストレージ
 
 * EFS（Elastic File System)
   * アベイラビリティゾーン、ファイルシステム、マウント手順等でてくる
@@ -127,7 +128,7 @@ published here: https://wiki.infra-workshop.tech/5c8a685fc129810042faa929
 * FSx
   * 是非試してね！！
 
-### オブジェクトストレージ
+### 実践: オブジェクトストレージ
 
 * S3(Simple Storage Service)
   * 振り返り：ファイルシステムは存在しない
@@ -152,42 +153,51 @@ published here: https://wiki.infra-workshop.tech/5c8a685fc129810042faa929
 ## QA
 
 ### Q. ブロックサイズを自動で... Q. ファイルストレージの場合は...
+
 * ブロックサイズは、ファイルシステムを作成する->パーティションごとに指定ができる
 * ファイルシステムは、固定長
 
 ### Q. オブジェクトストレージ内にあるオブジェクト...
+
 * フォルダという概念がそもそもない
 * けど、S3では作れる
 * 実際はフォルダはない。prefixと呼ばれる機能。
 * フラットに存在しているが、インターフェースとしてそう見せている
 
 ### Q. ファイルシステムを作ってくれるのは誰...
+
 * OSで作れる。作るのは自分で作る。
 * ファイルシステムのsuperblockの中でフォルダ構成等の特殊なメタデータを管理している
 * ファイルストレージでは管理者がファイルシステムを作っている
 * e.g. EFSの場合はAWSが作ってくれている!!
 
 ### EFSの準備ができたのでデモ
+
 * 8.0E（エクサバイト）のストレージが見える
 
 ### Q. オブジェクトストレージについてもう1度...
+
 * 分散ストレージと一緒に使われることが多い
 * ストレージ
 * 2、3年前のスライドか資料か何かでデータアクセス部の情報があった
   * 当時で毎秒50TBのデータが行き来していたらしい
 
 ### Q. ユニファイドストレージ...
+
 * 1個の製品だけどブロックストレージもファイルストレージもサポートしている
   * iSCSIとNFSのように  
 
 ### Q.WindowsでもMacでも、ファイルを右クリックしたらいろいろな情報がでてきますが...
+
 * アクセス日時、変更日時、...
 * まさにファイルシステムで管理しているメタ情報
 
 ### ファイルシステムはストレージ自体にメタデータ...
+
 * ファイルシステムにsuperblockがある
 * ファイルシステムを作った段階で、管理用の領域を一部用意完了している
 
 ### オブジェクトストレージ内にあるオブジェクトが...
+
 * 先ほどと同じ内容で、prefixにつく内容。
 * キーに  ****/filename のように記載される
