fixed markdown construction

--- a/20190315.md
+++ b/20190315.md
@@ -1,4 +1,7 @@
-published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
+# 仮想マシンってなんだっけ？(再演)
+
+ref: <https://wp.infra-workshop.tech/event/what-is-vm_rev2/>
+published here: <https://wiki.infra-workshop.tech/5c8bba50c129810042faa931>
 
 ## 自己紹介
 
@@ -13,7 +16,7 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
 
 * 今日はインフラ勉強会！！
 
-## 内容
+## 概要
 
 * 立場上、色んな資料が権利関係で使えない
 * 普通は50, 60毎ぐらい作る
@@ -21,38 +24,47 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
 * 質問はQ.を付けてね
 
 ## 内容
+
 * 仮想マシンってなんだっけ？
 
 ### 1. VMで構築したことない方向けの説明
 
 * どんな環境でも、システムを稼働させるにはハードウェアのリソースが必要
+
 #### HW
-  * 4種のリソースに分けられる
-    * CPU
-    * memory
-    * disk
-    * network
-  * 秋葉原に行ってメモリとかハードウェア買うよね。
-  * これらが「OS」からアクセスできるリソース
+
+* 4種のリソースに分けられる
+  * CPU
+  * memory
+  * disk
+  * network
+* 秋葉原に行ってメモリとかハードウェア買うよね。
+* これらが「OS」からアクセスできるリソース
+
 #### OS(Supervisor)
-  * 昔はSupervisorと呼ばれていた
-    * IBMの陰謀がどうこう
-  * HWを"抽象化する"
-    * 世の中にはたくさんのハードウェアが存在
-    * ハードウェアごとにアプリケーションを作るのは大変
-    * Driverがあれば
-  * OSは、プール(資源?)をプロセスに割り当て、動作させることができる
-    * e.g. top
-      * 上部欄: ハードウェアの資源全体
-      * COMMAND: どのコマンド/プログラムで実行されているか
+
+* 昔はSupervisorと呼ばれていた
+  * IBMの陰謀がどうこう
+* HWを"抽象化する"
+  * 世の中にはたくさんのハードウェアが存在
+  * ハードウェアごとにアプリケーションを作るのは大変
+  * Driverがあれば
+* OSは、プール(資源?)をプロセスに割り当て、動作させることができる
+  * e.g. top
+    * 上部欄: ハードウェアの資源全体
+    * COMMAND: どのコマンド/プログラムで実行されているか
+
 ### プロセス
-  * 最終的に実行されるなにがし。プログラム
+
+* 最終的に実行されるなにがし。プログラム
 
 ### 2.仮想マシンの仕組み
+
 * 仮想マシンでもハードウェアが必要
 * Oracle VirtualBox, VMware Player, Hyper-V, Xen, KVM
 
 #### 仮想マシン（ホスト型）
+
 * HW -> OS(Supervisor) -> Hypervisor ->  VMM ->  vHW -> OS -> Process
 * Hyper > Superﾀﾞﾖ
 * EmulatorやSimulator
@@ -67,6 +79,7 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
     * 会社によって考え方は異なる
 
 #### 仮想マシン（ベアメタル型）
+
 * HW -> Hypervisor ->  VMM ->  vHW -> OS -> Process
 * 必ずハードウェアは居る
   * 「クラウド環境でプログラムを動かす」といっても、必ずどこかのハード上で動かされる
@@ -82,8 +95,8 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
   * Intel VT-x
   * SR-IOV
 
-
 #### コンテナ（Docker）
+
 * 注意事項: 使うものによって仕組みが違ったりするので、今回はDockerに限って話をする
 
 * HW -> OS(Linux Kernel) -> DockerEngine -> Container -> Process
@@ -96,11 +109,11 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
   * 「Docker Hub」というレジストリから好きなコンテナイメージをダウンロードができる
     * OSやソフトウェアの"カタログ化"ができるようになった
       * 開発が用意に
-  * 
 
 ## 実演
 
 ### 実演: Ubuntu上でWindowsを動かす
+
 * 仮想マシンマネージャー
   * KVM上に作成
   * インストール用ISOを準備
@@ -110,13 +123,15 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
     * 知りたい人はググってね☆
 
 ### 実演: Nutanix（インフラ勉強会で使用）
-*  全て仮想マシンを動かすためのソフトウェアになっている
+
+* 全て仮想マシンを動かすためのソフトウェアになっている
   * 興味がある人は来週月曜日バージョンアップ作業するので要チェック！！
 * 数十台（つよい）
 * ライブマイグレーション
   * 仮想マシンを動かしたまま別の物理マシンへ引っ越しさせる
 
 ### 実演: Docker
+
 * dockerhubから持ってくる
   * docker image ls: ダウンロードした一覧が見れる
     * docker imagesでも可
@@ -133,6 +148,7 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
     * docker imagesにないものは自動的にDLしてくれる 
 
 ### 実演: Firecracker
+
 * HW -> Hypervisor ->  VMM ->  vHW -> OS -> Process
 
 * Kata Containerなど、違うアーキテクチャのものが出てきている
@@ -171,6 +187,7 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
     * とは
 
 ### Q.仮想マシン(ベアメタル型)とコンテナに比べて、仮想マシン(ホスト型)の方が向いているユースケースってどんなのでしょうか？
+
 * ホスト型はOSがHWを管理すればいい
   * Windowsではほぼ全てのデバイスドライバが提供されている
     * Windows 7でもインストールisoは3.1G
@@ -201,6 +218,7 @@ published here: https://wiki.infra-workshop.tech/5c8bba50c129810042faa931
 * 結婚はまだ早い
 
 ### Q. HWもハイパーバイザ型を想定した設計しているとかってことになるんでしょうか
+
 * Xeonの例
   * 仮想化支援技術を入れている
     * これだったら早いとかある
