added notation about VirtualBox and KVM

--- a/20190325.md
+++ b/20190325.md
@@ -26,7 +26,9 @@ published here: https://wiki.infra-workshop.tech/5c98e19edcf2f000585ac5e4
       * 二重のハイパバイザ
       * 用途: ESXiのデプロイしたいけど用意が無い・・・面倒。
 * 仮想化支援機能は明示的に設定してあげないと動作しない
-  * VMware ESXi, VMware Player
+  * 今回はVMware ESXi, VMware Playerについて取り上げる
+    * VirtualBoxやKVMでも同様
+    * https://twitter.com/barson_4/status/1110184475537764352
   * ハイパバイザーでも設定しないといけない
   * メモ: ホスト型、ベアメタル型ハイパーバイザにもBIOS設定がある
 
