added 20190326 as-is

--- a/20190325.md
+++ b/20190325.md
@@ -97,3 +97,6 @@ published here: https://wiki.infra-workshop.tech/5c98e19edcf2f000585ac5e4
   * 各レイヤでは、どのように見えているor処理されるか
 * Nestedは非推奨？
   * VMware Knowledgeあたり？
+
+## 後で調べた
+
